--- a/app/views/artigos/show.html.erb
+++ b/app/views/artigos/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @artigo.título %></h1>
+<h1><%= @artigo.title %></h1>
 
-<p><%= @artigo.conteúdo %></p>
+<p><%= @artigo.contents %></p>
 
 <%= link_to "Artigos", artigos_path %>
