added Rich text in new post

--- a/app/views/artigos/new.html.erb
+++ b/app/views/artigos/new.html.erb
@@ -13,7 +13,7 @@
 
     <div>
         <%= form.label :contents %><br>
-        <%= form.text_area :contents %>
+        <%= form.rich_text_area :contents %>
         <% @artigo.errors.full_messages_for(:contents).each do |message| %>
             <div><%= message %></div>
         <% end %>
