--- a/app/views/artigos/index.html.erb
+++ b/app/views/artigos/index.html.erb
@@ -7,6 +7,7 @@
             <%= artigo.title%>
         </a><br><br>
         <%= artigo.contents %> <br><br><br><br>
+        postado <%= time_tag artigo.created_at, "data-local": "time-ago" %>
     </li>
   <% end %>
 </ul>
