--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,93 @@
  *= require_tree .
  *= require_self
  */
+
+ 
+ @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,300&family=Poppins:wght@300&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,300&display=swap');
+* {
+    font-family: Nunito;
+    background-color: rgb(231, 231, 231);
+}
+
+
+#title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5vh;
+}
+
+
+#li-article {
+    margin-top: 2vh;
+    margin-bottom: 5vh;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    border-radius: 12px;
+    padding: 5vh;
+    background-color: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 4px 8px -2px, rgba(0, 0, 0, 0.3) 0px 3px 4px -3px;
+    border: 2px solid;
+}
+
+.li-article-link{
+    text-decoration: none;
+    color: black;
+    font-size: 2.5vh;
+    font-family: Poppins;
+}
+
+#posted-at {
+    font-size: .8em;
+}
+
+
+#new-article-content{
+    width: 100%;
+    display:block;
+    position:relative;
+    margin-top: 100px;
+    text-align: center;
+    height: auto;
+}
+
+.new-article-button {
+    color: rgb(0, 0, 0);
+    background-color: black;
+    color: white;
+    border-radius: 9px;
+    border: 1px transparent;
+    font-size: .9em;
+    padding: 1.5vh;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 8px 10px -3px, rgba(0, 0, 0, 0.3) 0px 3px 4px -3px;
+    width: 20vh;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+
+.new-article-button:hover {
+  background-color: #374151;
+}
+
+.new-article-button:focus {
+  box-shadow: none;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+
+.title-post-show {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.post-content {
+    margin-left: 40px;
+    margin-right: 40px;
+}
