--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,21 +13,79 @@
  *= require_tree .
  *= require_self
  */
-
  
- @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,300&family=Poppins:wght@300&display=swap');
- @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,300&display=swap');
-* {
+
+ @import url('https://fonts.googleapis.com/css2?family=Exo:wght@700&family=Montserrat:wght@900&family=Nunito:wght@300&family=Poppins:ital,wght@0,100;0,200;0,400;1,100&display=swap');
+ 
+ /*  GLOBAL  */
+ * {
     font-family: Nunito;
-    background-color: rgb(231, 231, 231);
+    background-color: rgb(241, 237, 237);
+    margin: 0;
+    padding: 0;
 }
 
+
+/*  HOME  */
 
 #title {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 5vh;
+}
+
+
+#header-nav{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Poppins;
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 15px;
+    height: 8vh;
+    margin-bottom: 5vh;
+}
+
+
+#logo {
+    font-family: Poppins;
+    font-weight: 900;
+    font-size: 1.8em;
+    text-decoration: none;
+    color: black;
+    margin-left: 3vh;
+}
+
+
+.new-article-button {
+    color: rgb(0, 0, 0);
+    background-color: black;
+    text-align: center;
+    color: white;
+    border-radius: 13px;
+    border: 1px transparent;
+    font-size: .8em;
+    padding: 1.1vh;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 8px 10px -3px, rgba(0, 0, 0, 0.3) 0px 3px 4px -3px;
+    width: 11vh;
+    cursor: pointer;
+    text-decoration: none;
+    position: relative;
+    font-family: Poppins;
+    margin-right: 3vh;
+}
+
+
+.new-article-button:hover {
+    background-color: #374151;
+}
+  
+
+.new-article-button:focus {
+    box-shadow: none;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
 }
 
 
@@ -43,12 +101,15 @@
     border: 2px solid;
 }
 
+
+
 .li-article-link{
     text-decoration: none;
     color: black;
     font-size: 2.5vh;
     font-family: Poppins;
 }
+
 
 #posted-at {
     font-size: .8em;
@@ -64,42 +125,64 @@
     height: auto;
 }
 
-.new-article-button {
-    color: rgb(0, 0, 0);
-    background-color: black;
-    color: white;
-    border-radius: 9px;
-    border: 1px transparent;
-    font-size: .9em;
-    padding: 1.5vh;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 8px 10px -3px, rgba(0, 0, 0, 0.3) 0px 3px 4px -3px;
-    width: 20vh;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-
-.new-article-button:hover {
-  background-color: #374151;
-}
-
-.new-article-button:focus {
-  box-shadow: none;
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 
 .title-post-show {
     margin-left: 20px;
     margin-right: 20px;
 }
 
+
 .post-content {
     margin-left: 40px;
     margin-right: 40px;
 }
+
+
+/*   FORM   */
+
+#form {
+    margin-left: 5vh;
+    margin-right: 5vh;
+}
+
+
+.button-publish-in-form {
+    color: rgb(0, 0, 0);
+    background-color: black;
+    text-align: center;
+    color: white;
+    border-radius: 13px;
+    border: 1px transparent;
+    font-size: .8em;
+    padding: 1.1vh;
+    margin-top: 2vh;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 8px 10px -3px, rgba(0, 0, 0, 0.3) 0px 3px 4px -3px;
+    width: 11vh;
+    cursor: pointer;
+    text-decoration: none;
+    position: relative;
+    font-family: Poppins;
+    margin-right: 3vh;
+}
+
+
+.button-publish-in-form:hover {
+    background-color: #374151;
+}
+
+
+.button-publish-in-form:focus {
+    box-shadow: none;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+
+#artigo_title {
+    font-size: 1.8em;
+    border-radius: 7px;
+    margin-bottom: 2vh;
+    height: 3.5vh;
+    width: 100%
+}
+
