--- a/app/views/artigos/new.html.erb
+++ b/app/views/artigos/new.html.erb
@@ -1,26 +1,22 @@
-<h1>Novo Artigo</h1>
-
-
-
 <%= form_with model: @artigo do |form| %>
-    <div>
-        <%= form.label :title %><br>
-        <%= form.text_field :title %>
-        <% @artigo.errors.full_messages_for(:title).each do |message| %>
-            <div><%= message %></div>
+    <div id="form">
+        <div>
+            <%= form.label :Título %><br>
+            <%= form.text_field :title %>
+            <% @artigo.errors.full_messages_for(:title).each do |message| %>
+                <div><%= message %></div>
+            <% end %>
+        </div>
+
+        <div>
+            <%= form.label :Conteúdo %><br>
+            <%= form.rich_text_area :contents %>
+            <% @artigo.errors.full_messages_for(:contents).each do |message| %>
+                <div><%= message %></div>
+            <% end %>
+        </div>
+                <div>
+                    <%= form.submit "Publicar", class: 'button-publish-in-form' %>
+                </div>
         <% end %>
     </div>
-
-    <div>
-        <%= form.label :contents %><br>
-        <%= form.rich_text_area :contents %>
-        <% @artigo.errors.full_messages_for(:contents).each do |message| %>
-            <div><%= message %></div>
-        <% end %>
-    </div>
-            <div>
-                <%= form.submit %>
-            </div>
-    <% end %>
-
-    <%= button_to "Voltar para Artigos", artigos_path, method: :get %>
