--- a/app/views/artigos/_form.html.erb
+++ b/app/views/artigos/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with model: @artigo do |form| %>
+<%= form_with model: artigo do |form| %>
     <div id="form">
         <div>
             <%= form.label :Título %><br>
             <%= form.text_field :title %>
-            <% @artigo.errors.full_messages_for(:title).each do |message| %>
+            <% artigo.errors.full_messages_for(:title).each do |message| %>
                 <div><%= message %></div>
             <% end %>
         </div>
@@ -11,7 +11,7 @@
         <div>
             <%= form.label :Conteúdo %><br>
             <%= form.rich_text_area :contents %>
-            <% @artigo.errors.full_messages_for(:contents).each do |message| %>
+            <% artigo.errors.full_messages_for(:contents).each do |message| %>
                 <div><%= message %></div>
             <% end %>
         </div>
