--- a/app/views/artigos/new.html.erb
+++ b/app/views/artigos/new.html.erb
@@ -1,22 +1,1 @@
-<%= form_with model: @artigo do |form| %>
-    <div id="form">
-        <div>
-            <%= form.label :Título %><br>
-            <%= form.text_field :title %>
-            <% @artigo.errors.full_messages_for(:title).each do |message| %>
-                <div><%= message %></div>
-            <% end %>
-        </div>
-
-        <div>
-            <%= form.label :Conteúdo %><br>
-            <%= form.rich_text_area :contents %>
-            <% @artigo.errors.full_messages_for(:contents).each do |message| %>
-                <div><%= message %></div>
-            <% end %>
-        </div>
-                <div>
-                    <%= form.submit "Publicar", class: 'button-publish-in-form' %>
-                </div>
-        <% end %>
-    </div>
+<%= render "form", artigo: @artigo %>
