insert button edit

--- a/app/views/artigos/_form.html.erb
+++ b/app/views/artigos/_form.html.erb
@@ -16,7 +16,7 @@
             <% end %>
         </div>
                 <div>
-                    <%= form.submit "Atualizar", class: 'button-publish-in-form' %>
+                    <%= form.submit "Publicar", class: 'button-publish-in-form' %>
                 </div>
         <% end %>
     </div>
