--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,11 @@
       <nav id="sidenav">
           <%= link_to image_tag("logo.png"), root_path, class: 'logo' %>
           <div class="icons-sidenav">
-            <%= button_to image_tag("home.png"), root_path, class: 'icon'%>
-            <%= button_to image_tag("profile.png"), root_path, class: 'icon'%>
-            <%= button_to image_tag("newplus.png"), root_path, class: 'icon'%>
-            <%= button_to image_tag("copy.png"), root_path, class: 'icon'%>
-            <%= button_to image_tag("search.png"), root_path, class: 'icon'%>
+            <%= link_to image_tag("home.png"), root_path, class: 'icon'%>
+            <%= link_to image_tag("profile.png"), root_path, class: 'icon'%>
+            <%= link_to image_tag("newplus.png"), new_artigo_path, class: 'icon'%>
+            <%= link_to image_tag("copy.png"), root_path, class: 'icon'%>
+            <%= link_to image_tag("search.png"), root_path, class: 'icon'%>
           </div>
       </nav>
     </header>
