--- a/app/views/artigos/index.html.erb
+++ b/app/views/artigos/index.html.erb
@@ -1,3 +1,9 @@
+<div>
+  <%= search_form_for @q do |f| %>
+    <%= f.search_field :title_cont %>
+    <%= f.submit %>
+<% end %>
+</div>
 <div id="all-articles">
   <% @artigos.each do |artigo| %>
     <div id="li-article" onclick="window.location.href=('/artigos/<%= artigo.id %>')">
