--- a/app/views/artigos/index.html.erb
+++ b/app/views/artigos/index.html.erb
@@ -1,18 +1,21 @@
 <div>
   <%= search_form_for @q do |f| %>
-    <%= f.search_field :title_cont %>
-    <%= f.submit %>
-<% end %>
+    <%= f.search_field :title_cont, placeholder: "Pesquisar..." %>
+  <% end %>
 </div>
 <div id="all-articles">
   <% @artigos.each do |artigo| %>
     <div id="li-article" onclick="window.location.href=('/artigos/<%= artigo.id %>')">
         <a class="li-article-link" href="/artigos/<%= artigo.id %>">
-          <%= artigo.title%>
+          <div><%= artigo.title %></div>
+          <div><%= truncate(strip_tags(artigo.contents.to_s), length: 250, omission: '...') %></div>
         </a>
         <div id="posted-at">
           🕣 postado <%= time_tag artigo.created_at, "data-local": "time-ago" %>
         </div>
     </div>
   <% end %>
+</div>
+<div>
+  <%= will_paginate @posts %>
 </div>
