change model and controller names to english

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <header>
       <nav id="header-nav">
         <%= link_to image_tag("logo.png"), root_path, class: 'logo' %>
-        <a><%= link_to "Novo artigo", new_artigo_path, class:'new-article-button', method: :get %></a>
+        <a><%= link_to "Novo artigo", new_article_path, class:'new-article-button', method: :get %></a>
       </nav>
     </header>
 
