--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,7 +68,7 @@ body {
 
 
 
-#artigo_search {
+#article_search {
     text-align: center;
     padding-top: 4vh;
     margin-bottom: 9vh;
@@ -77,7 +77,7 @@ body {
 
 
 
-#artigo_search input {
+#article_search input {
     border: 1px solid;
     background: url("search.png") top left no-repeat;
     background-size: 2.5vh;
@@ -96,7 +96,7 @@ body {
 
 
 
-#artigo_search input[type="search"]::-webkit-search-decoration, #artigo_search input[type="search"]::-webkit-search-cancel-button, #artigo_search input[type="search"]::-webkit-search-results-button, #artigo_search input[type="search"]::-webkit-search-results-decoration {
+#article_search input[type="search"]::-webkit-search-decoration, #article_search input[type="search"]::-webkit-search-cancel-button, #article_search input[type="search"]::-webkit-search-results-button, #article_search input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
 
@@ -281,7 +281,7 @@ body {
 
 
 
-#artigo_title {
+#article_title {
     font-size: 1.8em;
     border-radius: 7px;
     margin-bottom: 2vh;
