--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
   <% @articles.each do |article| %>
     <div id="li-article" onclick="window.location.href=('/articles/<%= article.id %>')">
         <a class="li-article-link" href="/articles/<%= article.id %>">
-          <div><%= article.title %></div>
+          <div class="article-title"><%= article.title %></div>
           <div><%= truncate(strip_tags(article.content.to_s), length: 350, omission: '...') %></div>
         </a>
         <div id="posted-at">
