--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,4 +1,5 @@
-<% if notice || alert %>
+<% if notice %>
     <p class="notice"><%= notice %></p>
+<% elsif alert %>
     <p class="alert"><%= alert %></p>
 <% end %>
