--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,7 @@
 
   <body>
 
-    <header>
-      <nav id="header-nav">
-        <%= link_to image_tag("logo.png"), root_path, class: 'logo' %>
-        <a><%= link_to "Novo artigo", new_article_path, class:'new-article-button', method: :get %></a>
-        <%= render 'layouts/alerts' %>
-      </nav>
-    </header>
+    <%= render 'user/session_manager' %>
 
     <div id="yield">
 
