--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -3,10 +3,10 @@
       <nav id="header-nav">
         <%= link_to image_tag("logo.png"), root_path, class: 'logo' %>
         <% if current_user %>
-            <%= render 'layouts/alerts' %>
             <a><%= link_to "Novo artigo", new_article_path, class:'new-article-button', method: :get %></a>
+            <a><%= link_to "Desconectar", destroy_user_session_path,class:'desconect-user-button', data: {turbo_method: :delete} %></a>
         <% else %>
-            <a><%= link_to 'fazer login', new_user_session_path, method: :get %></a>
+
         <% end %>
       </nav>
 </header>
