--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -6,7 +6,7 @@
             <a><%= link_to "Novo artigo", new_article_path, class:'new-article-button', method: :get %></a>
             <a><%= link_to "Desconectar", destroy_user_session_path,class:'desconect-user-button', data: {turbo_method: :delete} %></a>
         <% else %>
-
+            <a><%= link_to "Logar", new_user_session_url, class:'new-article-button', method: :get %></a>
         <% end %>
       </nav>
 </header>
