--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -337,3 +337,92 @@ body {
     font-family: Poppins;
     margin-right: 3vh;
 }
+
+
+#new_user {
+    position: relative;
+    z-index: 1;
+    background: #FFFFFF;
+    max-width: 360px;
+    margin: 0 auto 100px;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.12);
+  }
+
+
+
+
+
+.login-screen {
+    max-width: 65%;
+    margin: auto;
+    margin-top: 25vh;
+
+}
+
+
+
+
+#user_email {
+    background:#ecf0f1;
+    border: #ccc 1px solid;
+    border-bottom: #ccc 2px solid;
+    padding: 8px;
+    color:#AAAAAA;
+    margin-top:10px;
+    font-size:1em;
+    border-radius:4px;
+    width: 65%;
+    max-width: 40vh;
+}
+
+#user_password {
+    background:#ecf0f1;
+    border: #ccc 1px solid;
+    border-bottom: #ccc 2px solid;
+    padding: 8px;
+    color:#AAAAAA;
+    margin-top:10px;
+    font-size:1em;
+    border-radius:4px;
+    width: 65%;
+    max-width: 40vh;
+}
+
+
+
+.login-button {
+  background-color: #222;
+  border-radius: 13px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Farfetch Basis","Helvetica Neue",Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin: 0;
+  max-width: 10vh;
+  min-height: 44px;
+  min-width: 10px;
+  outline: none;
+  overflow: hidden;
+  padding: 9px 20px 8px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  text-decoration: none;
+  border:0 none;
+}
+
+.login-button:hover,
+.login-button:focus {
+  opacity: .75;
+}
