--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,9 @@
 <div>
     <div class="edit-and-destroy">
-        <%= link_to "Editar", edit_article_path(@article)%><br>
-        <%= link_to "Apagar esse artigo", article_path(@article), data: {
+        <%= link_to "Edit", edit_article_path(@article)%><br>
+        <%= link_to "Erase", article_path(@article), data: {
             turbo_method: :delete,
-            turbo_confirm: "Tem certeza que quer apagar este artigo? Esta ação será irreversível."
+            turbo_confirm: "Are you sure you want to delete this article? This action will be irreversible."
         }%>
     </div>
     <br><br><br>
