#On branch fix_bug_blank  #Changes to be committed:

--- a/app/views/layouts/admins.html.erb
+++ b/app/views/layouts/admins.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-      <%= render 'user/session_manager' %>
+    <%= render 'user/session_manager_admins' %>
     <div id="yield">
       <%= yield %>
     </div>
