--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -30,11 +30,20 @@
   max-width: 100% !important;
   height: 350px;
   overflow-y: auto;
+
 }
 
 .trix-content {
   min-height: 300px;
   overflow-y: auto;
+}
+
+.trix-content div,a,strong,.title-show{
+  font-family: 'Nunito', sans-serif;
+  }
+
+.post-content {
+  font-family: 'Nunito', sans-serif;
 }
 
 
