--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
 
     <div class="txt_footer">
         <p>
-            Memorit, an open source platform for devs.
+            Memorit, an open source blog platform for devs.
         </p>
     </div>
 </div>
