--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -413,6 +413,19 @@ body {
     max-width: 40vh;
 }
 
+#user_password_confirmation {
+    background:#ecf0f1;
+    border: #ccc 1px solid;
+    border-bottom: #ccc 2px solid;
+    padding: 8px;
+    color:#AAAAAA;
+    margin-top:10px;
+    font-size:1em;
+    border-radius:4px;
+    width: 65%;
+    max-width: 40vh;
+}
+
 
 
 .login-button {
