--- a/app/views/user/_session_manager.html.erb
+++ b/app/views/user/_session_manager.html.erb
@@ -4,7 +4,9 @@
         <%= link_to image_tag("logo.png"), root_path, class: 'logo' %>
         <% if current_user %>
             <a><%= link_to image_tag("newplus.png"), new_article_path, class:'new-article-icon', method: :get %></a>
+            <h2><%= current_user.name %></h2>
             <a><%= link_to "Disconnect", destroy_user_session_path,class:'desconect-user-button', data: {turbo_method: :delete} %></a>
+            
         <% else %>
             <a><%= link_to "Login", new_user_session_url, class:'new-article-button', method: :get %></a>
         <% end %>
