--- a/app/views/user/_session_manager_admins.html.erb
+++ b/app/views/user/_session_manager_admins.html.erb
@@ -5,6 +5,7 @@
         <% if current_user %>
             <a><%= link_to image_tag("newplus.png"), new_article_path, class:'new-article-icon', method: :get %></a>
             <a><%= link_to "Disconnect", destroy_user_session_path,class:'desconect-user-button', data: {turbo_method: :delete} %></a>
+            <h2><%= current_user.name %></h2>
         <% else %>
             <a><%= link_to "Login", new_user_session_url, class:'new-article-button', method: :get %></a>
         <% end %>
