--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,17 @@
 <div>
-    <div class="edit-and-destroy">
-        <%= link_to "Edit", edit_article_path(@article)%><br>
-        <%= link_to "Erase", article_path(@article), data: {
-            turbo_method: :delete,
-            turbo_confirm: "Are you sure you want to delete this article? This action will be irreversible."
-        }%>
-    </div>
+
+    <% if current_user %>
+        <div class="edit-and-destroy">
+            <%= link_to "Edit", edit_article_path(@article)%><br>
+            <%= link_to "Erase", article_path(@article), data: {
+                turbo_method: :delete,
+                turbo_confirm: "Are you sure you want to delete this article? This action will be irreversible."
+                }%>
+        </div>
+
+    <% end %>
+
+   
     <br><br><br>
     <h1 class="title-show">    
         <%= @article.title %>
@@ -15,5 +21,7 @@
             <%= @article.content %>
         </p>
     </div>
+
+    <p>Posted by <b><%= @article.user.name %><b> <p>
 </div>
 
