added links for share articles but not working :(

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -23,5 +23,9 @@
     </div>
 
     <p>Posted by <b><%= @article.user.name %><b> <p>
+
+    <div class="icons_footer">
+        <%= render 'articles/links_share' %>
+    </div>
 </div>
 
